# scheme-from-python

./: README.md
.github/workflows/: ci.yml
demo/: arithmetic.scm  factorial.scm  lambda.scm
src/: setup.cfg
src/sfpy/: __main__.py  builtins.py  core.py  evaluators.py  exceptions.py  functions.py  interpreters.py  parsers.py  programs.py  tokens.py  values.py
