[metadata]
name = scheme-from-python
version = attr: scpy.__version__
author = StardustDL
author_email = stardustdl@163.com
description = An experimental scheme interpreter in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StardustDL/scheme-from-python
project_urls =
    Source Code = https://github.com/StardustDL/scheme-from-python
    Changes = https://github.com/StardustDL/scheme-from-python/releases
    Bug Tracker = https://github.com/StardustDL/scheme-from-python/issues
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    click>=8.1.3

[options.entry_points]
console_scripts =
    sfpy = sfpy.__main__:main